<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/main_navigation">

<!--    &lt;!&ndash; Onboarding Flow &ndash;&gt;-->
<!--    <fragment-->
<!--        android:id="@+id/onboardingFragment"-->
<!--        android:name="com.example.gamified.ui.onboarding.OnboardingFragment"-->
<!--        android:label="@string/onboarding"-->
<!--        tools:layout="@layout/fragment_onboarding">-->
<!--        <action-->
<!--            android:id="@+id/action_onboardingFragment_to_auth_navigation"-->
<!--            app:destination="@id/auth_navigation"-->
<!--            app:popUpTo="@id/onboardingFragment"-->
<!--            app:popUpToInclusive="true" />-->
<!--    </fragment>-->

<!--    &lt;!&ndash; Authentication Navigation &ndash;&gt;-->
<!--    <navigation-->
<!--        android:id="@+id/auth_navigation"-->
<!--        app:startDestination="@id/loginFragment">-->

<!--        <fragment-->
<!--            android:id="@+id/"-->
<!--            android:name="com.example.gamified.ui.auth.LoginFragment"-->
<!--            android:label="@string/login"-->
<!--            tools:layout="@layout/fragment_login">-->
<!--            <action-->
<!--                android:id="@+id/action_loginFragment_to_registerFragment"-->
<!--                app:destination="@id/registerFragment" />-->
<!--            <action-->
<!--                android:id="@+id/action_loginFragment_to_main_navigation"-->
<!--                app:destination="@id/main_navigation"-->
<!--                app:popUpTo="@id/auth_navigation"-->
<!--                app:popUpToInclusive="true" />-->
<!--        </fragment>-->

<!--        <fragment-->
<!--            android:id="@+id/registerFragment"-->
<!--            android:name="com.example.gamified."-->
<!--            android:label="@string/register"-->
<!--            tools:layout="@layout/fragment_register">-->
<!--            <action-->
<!--                android:id="@+id/action_registerFragment_to_loginFragment"-->
<!--                app:destination="@id/loginFragment" />-->
<!--        </fragment>-->
<!--    </navigation>-->

    <!-- Main Navigation (Bottom Navigation) -->
    <navigation
        android:id="@+id/main_navigation"
        app:startDestination="@id/homeFragment">
        
        <!-- Home -->
        <fragment
            android:id="@+id/homeFragment"
            android:name="com.example.gamified.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_homeFragment_to_emergencyFragment"
                app:destination="@id/emergencyFragment" />
            <action
                android:id="@+id/action_homeFragment_to_contactsFragment"
                app:destination="@id/contactsFragment" />
        </fragment>

        <!-- Emergency -->
        <fragment
            android:id="@+id/emergencyFragment"
            android:name="com.example.gamified.EmergencyFragment"
            android:label="@string/emergency"
            tools:layout="@layout/fragment_emergency" />

        <!-- Profile -->
        <fragment
            android:id="@+id/profileFragment"
            android:name="com.example.gamified.profile.ProfileFragment"
            android:label="@string/profile"
            tools:layout="@layout/fragment_profile" />
            
        <!-- Contacts -->
        <fragment
            android:id="@+id/contactsFragment"
            android:name="com.example.gamified.contacts.ContactsFragment"
            android:label="Contacts"
            tools:layout="@layout/fragment_contacts" />
            
    </navigation>

</navigation>
